plugin basics working

--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "description": "",
   "devDependencies": {
     "@types/chrome": "^0.0.287",
+    "@types/node": "^22.10.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "dotenv-webpack": "^8.1.0"
   }
 }
