--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "manifest_version": 3,
     "name": "IP Logger with Prefix",
     "version": "1.0",
-    "permissions": ["storage", "activeTab", "scripting", "webNavigation"],
+    "permissions": ["storage", "activeTab", "scripting", "webNavigation","webRequest",
+  "webRequestBlocking"],
     "background": {
       "service_worker": "dist/background.js"
     },
